--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="Add your FitnessSF membership to your Apple wallet. FSF Wallet is free, open-source, privacy-first web app." />
+<meta name="description" content="Add your FitnessSF membership to your Apple wallet. Fitness Wallet is free, open-source, privacy-first web app." />
 
 <meta name="twitter:card" value="summary" />
 <meta name="twitter:creator" content="@aklarfeld" />
 
-<meta property="og:title" content="Fitness SF membership → Apple Wallet | FSFWallet.app" />
+<meta property="og:title" content="Fitness SF membership → Apple Wallet | www.fitnesswallet.app" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://fsfwallet.app"/>
-<!-- <meta property="og:image" content="https://fsfwallet.app/share_diagram.png"/> -->
+<meta property="og:url" content="https://www.fitnesswallet.app"/>
+<!-- <meta property="og:image" content="https://fitnesswallet.app/share_diagram.png"/> -->
 <meta property="og:description" content="Add your Fitness SF Membership to your Apple wallet. FSF Wallet is free, open-source, privacy-first web app."/>
 
-<title>FSF Membership → Apple Wallet</title>
+<title>FitnessSF Membership → Apple Wallet</title>
 
 <div id="root"></div>
 
 <script type="module" src="./src/index.tsx"></script>
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83153710-13"></script> -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5K1YG75M56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  // gtag('config', 'UA-83153710-13');
+  gtag('config', 'G-5K1YG75M56');
 </script>
