Fix twitter handle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="description" content="Add your FitnessSF membership to your Apple wallet. Fitness Wallet is free, open-source, privacy-first web app." />
 
 <meta name="twitter:card" value="summary" />
-<meta name="twitter:creator" content="@aklarfeld" />
+<meta name="twitter:creator" content="@AlexKlarfeld" />
 
 <meta property="og:title" content="Fitness SF membership → Apple Wallet | www.fitnesswallet.app" />
 <meta property="og:type" content="article" />
