Changed copy to mobile instead of apple

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="Add your FitnessSF membership to your Apple wallet. Fitness Wallet is free, open-source, privacy-first web app." />
+<meta name="description" content="Add your FitnessSF membership to your mobile wallet. Fitness Wallet is free, open-source, privacy-first web app." />
 
 <meta name="twitter:card" value="summary" />
 <meta name="twitter:creator" content="@AlexKlarfeld" />
 
-<meta property="og:title" content="Fitness SF membership → Apple Wallet | www.fitnesswallet.app" />
+<meta property="og:title" content="Fitness SF membership → Mobile Wallet | www.fitnesswallet.app" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.fitnesswallet.app"/>
 <!-- <meta property="og:image" content="https://fitnesswallet.app/share_diagram.png"/> -->
-<meta property="og:description" content="Add your Fitness SF Membership to your Apple wallet. FSF Wallet is free, open-source, privacy-first web app."/>
+<meta property="og:description" content="Add your Fitness SF Membership to your mobile wallet. FitnessWallet is free, open-source, privacy-first web app."/>
 
-<title>FitnessSF Membership → Apple Wallet</title>
+<title>FitnessSF Membership → Mobile Wallet</title>
 
 <div id="root"></div>
 
