Removed GH deployment and changed URL

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="twitter:card" value="summary" />
 <meta name="twitter:creator" content="@AlexKlarfeld" />
 
-<meta property="og:title" content="Fitness SF membership → Mobile Wallet | www.fitnesswallet.app" />
+<meta property="og:title" content="Fitness SF membership → Mobile Wallet | fitnesswallet.app" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://www.fitnesswallet.app"/>
+<meta property="og:url" content="https://fitnesswallet.app"/>
 <!-- <meta property="og:image" content="https://fitnesswallet.app/share_diagram.png"/> -->
 <meta property="og:description" content="Add your Fitness SF Membership to your mobile wallet. FitnessWallet is free, open-source, privacy-first web app."/>
 
